# kai-docx-generator

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml  requirements.txt
evals/: evals.json
examples/: sample_report.md
kai_docx_generator/: __init__.py
kai_docx_generator/engine/: __init__.py  docx_engine.py  template_filler.py
kai_docx_generator/parser/: md_to_ast.py
kai_docx_generator/scripts/: __init__.py  fill_template.py  generate.py  validate.py
kai_docx_generator/styles/: business_letter.py  contract.py  dispatch.py  meeting.py  notice.py  report.py  standard.py  tech_spec.py
references/: style-presets.md
scripts/: fill_template.py  generate.py  validate.py
tests/: test_cli.py  test_docx_engine.py  test_md_to_ast.py  test_styles.py  test_template_filler.py
