[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kai-docx-generator"
version = "0.1.0"
description = "沙箱环境 Word 文档生成器"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "markdown-it-py>=3.0.0",
    "lxml>=4.9.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
]

[project.scripts]

[tool.setuptools.packages.find]
include = ["kai_docx_generator*"]
